added new screen for weather forecasts

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "headerTitle": {
-    "weatherInfoScreen": "Weather Info"
+    "weatherInfoScreen": "Weather Info",
+    "weatherForecastScreen": "Weather Forecast"
   }
 }
